--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Bitacora\Bitacora.cs" />
     <Compile Include="Bitacora\BitacoraDAL.cs" />
     <Compile Include="Bitacora\BitacoraBLL.cs" />
+    <Compile Include="EnumEvento.cs" />
     <Compile Include="EnumRol.cs" />
     <Compile Include="Constantes.cs" />
     <Compile Include="Excepciones\Excepcion.cs" />
