--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -42,12 +42,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Usuario.cs" />
+    <Compile Include="Voucher.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
