--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,10 +40,12 @@
   <ItemGroup>
     <Compile Include="BLLAlojamiento.cs" />
     <Compile Include="BLLInstructor.cs" />
+    <Compile Include="BLLProducto.cs" />
     <Compile Include="BLLTraslado.cs" />
     <Compile Include="FamiliaPatenteBLL.cs" />
     <Compile Include="IBLL\IBLLAlojamiento.cs" />
     <Compile Include="IBLL\IBLLInstructor.cs" />
+    <Compile Include="IBLL\IBLLProducto.cs" />
     <Compile Include="IBLL\IBLLTraslado.cs" />
     <Compile Include="IBLL\IFamiliaPatenteBLL.cs" />
   </ItemGroup>
