--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Alojamiento.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Especialidad.cs" />
+    <Compile Include="Fecha.cs" />
+    <Compile Include="Horario.cs" />
     <Compile Include="Instructor.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
