--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EnumDificultad.cs" />
     <Compile Include="EnumEvento.cs" />
     <Compile Include="Constantes.cs" />
+    <Compile Include="EnumProducto.cs" />
     <Compile Include="EnumVehiculo.cs" />
     <Compile Include="PDFUtil.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
