--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -39,11 +39,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLLAlojamiento.cs" />
+    <Compile Include="BLLCalendario.cs" />
     <Compile Include="BLLInstructor.cs" />
     <Compile Include="BLLProducto.cs" />
     <Compile Include="BLLTraslado.cs" />
     <Compile Include="FamiliaPatenteBLL.cs" />
     <Compile Include="IBLL\IBLLAlojamiento.cs" />
+    <Compile Include="IBLL\IBLLCalendario.cs" />
     <Compile Include="IBLL\IBLLInstructor.cs" />
     <Compile Include="IBLL\IBLLProducto.cs" />
     <Compile Include="IBLL\IBLLTraslado.cs" />
